en/15.4/config/index.rst
|Fess| Configuration Guide
===========================

This is a comprehensive guide for configuring |Fess|. Each section is organized by purpose.

.. toctree::
   :maxdepth: 2
   :caption: Introduction

   intro

.. toctree::
   :maxdepth: 2
   :caption: Basic Setup

   setup-port-network
   setup-memory
   setup-windows-service

.. toctree::
   :maxdepth: 2
   :caption: Crawler Configuration

   crawler-basic
   crawler-advanced
   crawler-thumbnail

.. toctree::
   :maxdepth: 2
   :caption: Search Features

   search-basic
   search-advanced
   search-geosearch
   search-scroll
   search-form-integration

.. toctree::
   :maxdepth: 2
   :caption: Security Settings

   security-role
   security-virtual-host

.. toctree::
   :maxdepth: 2
   :caption: SSO Settings

   sso-saml
   sso-oidc
   sso-entraid
   sso-spnego

.. toctree::
   :maxdepth: 2
   :caption: System Administration

   admin-logging
   admin-index-backup
   admin-analyzer
   admin-opensearch-dashboards
