en/15.5/config/index.rst
|Fess| Configuration Guide
===========================

This is a comprehensive guide for configuring |Fess|. Each section is organized by purpose.

.. toctree::
   :maxdepth: 2
   :caption: Introduction

   intro

.. toctree::
   :maxdepth: 2
   :caption: Basic Setup

   setup-port-network
   setup-memory
   setup-windows-service

.. toctree::
   :maxdepth: 2
   :caption: Crawler Configuration

   crawler-basic
   crawler-advanced
   crawler-thumbnail

.. toctree::
   :maxdepth: 2
   :caption: Datastore Connectors

   datastore/index

.. toctree::
   :maxdepth: 2
   :caption: Search Features

   search-basic
   search-advanced
   search-geosearch
   search-scroll
   search-form-integration
   rank-fusion

.. toctree::
   :maxdepth: 2
   :caption: Security Settings

   security-role
   security-virtual-host
   ldap-integration
   multitenancy

.. toctree::
   :maxdepth: 2
   :caption: SSO Settings

   sso-saml
   sso-oidc
   sso-entraid
   sso-spnego

.. toctree::
   :maxdepth: 2
   :caption: LLM/AI Chat Settings

   llm-overview
   llm-ollama
   llm-openai
   llm-gemini
   rag-chat

.. toctree::
   :maxdepth: 2
   :caption: Scripting

   scripting-overview
   scripting-groovy

.. toctree::
   :maxdepth: 2
   :caption: Performance & Operations

   rate-limiting
   load-control

.. toctree::
   :maxdepth: 2
   :caption: System Administration

   admin-logging
   admin-index-backup
   admin-index-export
   admin-analyzer
   admin-opensearch-dashboards
